Fixed line height alignment for reply and delete buttons

--- a/app/assets/stylesheets/view_stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/view_stylesheets/notes.css.scss
@@ -497,7 +497,7 @@ textarea.comment-text, #newcomment, .comment .new-reply-panel .newreply {
         color: #34495E;
         font-weight: normal;
         margin-right: 20px;
-        line-height: 20px;
+        line-height: 22px;
         &:hover {
           text-decoration: none;
         }
